[package]
name = "near-contract-sample1"
version = "0.0.1"
authors = ["riversyang"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "4.0.0-pre.6", features = ["unstable"] }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"

[workspace]
members = []
